--- a/main/Index.html
+++ b/main/Index.html
@@ -48,6 +48,29 @@
     <p><a href="#">Back to the top</a></p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyAgFkhVyYQWq-7W4gzQo1Ib54o3nBVf9n4",
+      authDomain: "alexrider-95a24.firebaseapp.com",
+      projectId: "alexrider-95a24",
+      storageBucket: "alexrider-95a24.appspot.com",
+      messagingSenderId: "778405431082",
+      appId: "1:778405431082:web:c630808a7cbb17274b4053",
+      measurementId: "G-3R2WFWJB95"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 
 <script>
     var typed = new Typed(".auto-type", {
